@@ -22,12 +22,6 @@ test_script:
   - timeout /t 4 /nobreak > NUL
   - powershell -File "%APPVEYOR_BUILD_FOLDER%\test\appveyor\dbsetup.ps1"
   - timeout /t 4 /nobreak > NUL
-  - ps: Start-Service 'MSSQL$SQL2016'
-  - timeout /t 4 /nobreak > NUL
-  - sqlcmd -S ".\SQL2016" -U sa -P Password12! -i %APPVEYOR_BUILD_FOLDER%\test\appveyor\dbsetup.sql
-  - bundle exec rake TINYTDS_UNIT_HOST_TEST=localhost TINYTDS_UNIT_DATASERVER="localhost\SQL2016" TINYTDS_SCHEMA=sqlserver_2014 TDSVER=7.1
-  - bundle exec rake TINYTDS_UNIT_HOST_TEST=localhost TINYTDS_UNIT_DATASERVER="localhost\SQL2016" TINYTDS_SCHEMA=sqlserver_2014
-  - ps: Stop-Service 'MSSQL$SQL2016'
   - ps: Start-Service 'MSSQL$SQL2014'
   - timeout /t 4 /nobreak > NUL
   - sqlcmd -S ".\SQL2014" -U sa -P Password12! -i %APPVEYOR_BUILD_FOLDER%\test\appveyor\dbsetup.sql
@@ -45,7 +39,5 @@ environment:
     secure: fYKSKV4v+36OFQp2nZdX4DfUpgmy5cm0wuR73cgdmEk=
   matrix:
     - ruby_version: "23-x64"
-    - ruby_version: "23"
-    - ruby_version: "200"
 on_failure:
   - find -name compile.log | xargs cat
